# mail

./: .env.example  .gitignore  README.md  examples.py  pyproject.toml  setup_oauth.md  test_client.py  test_mail_client.py
.claude/: settings.local.json
src/mail/: __init__.py  cli.py  mail_client.py
